[project]
name = "chatbothomework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langchain-text-splitters>=0.3.8",
    "ollama>=0.4.8",
    "protobuf==3.20.3",
    "pylint>=3.3.7",
    "pypdf>=5.5.0",
    "streamlit>=1.45.1",
]
